test/files/invalid/invalid_vector_default.fbs
table Foo {
    x:[int32] = [1];
}
