test/files/invalid/invalid_vector_default.stderr
[0m[1m[38;5;9merror[0m[1m: Unsupported default value[0m
  [0m[34m┌─[0m test/files/invalid/invalid_vector_default.fbs:2:17
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m     x:[int32] = [0m[31m[1][0m;
  [0m[34m│[0m                 [0m[31m^^^[0m [0m[31mvectors only support default values of null or the empty list[0m

Error: Bailing because of errors
